homepage/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homepage
  annotations:
    linkerd.io/inject: disabled
