homepage/flou-homepage.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: homepage
  namespace: homepage
spec:
  replicas: 5
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app: homepage
    spec:
      imagePullSecrets:
        - name: harbor
      containers:
      - name: homepage
        image: harbor.flou.dev/flou21/flou-homepage:403cea87-6066-40ad-af76-1e83902ae01f
        resources:
          requests:
            memory: 10Mi
            cpu: 10m
          limits:
            memory: 20Mi
            cpu: 20m
        ports:
        - containerPort: 80
          name: web
  minReadySeconds: 30
  revisionHistoryLimit: 3
  strategy:
    canary: 
      maxSurge: "25%"
      maxUnavailable: 1
      steps:
      - setWeight: 10
      - pause:
          duration: 1m
      - analysis:
          templates:
          - templateName: success-rate
          args:
          - name: service-name
            value: homepage-canary
      - setWeight: 20
      - pause:
          duration: 1m
      - analysis:
          templates:
          - templateName: success-rate
          args:
          - name: service-name
            value: homepage-canary
      - setWeight: 50
      - pause:
          duration: 30s
      - analysis:
          templates:
          - templateName: success-rate
          args:
          - name: service-name
            value: homepage-canary
      canaryService: homepage-canary
      stableService: homepage-stable
      trafficRouting:
        smi:
          rootService: homepage
          trafficSplitName: homepage-canary-traffic-split
---
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: homepage
spec:
  selector:
    app: homepage
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: homepage-stable
  namespace: homepage
spec:
  selector:
    app: homepage
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: homepage-canary
  namespace: homepage
spec:
  selector:
    app: homepage
  ports:
  - port: 80
    targetPort: 80
