homepage/test-page.yaml

apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: test-page
  namespace: homepage
spec:
  replicas: 5
  selector:
    matchLabels:
      app: test-page
  template:
    metadata:
      labels:
        app: test-page
    spec:
      imagePullSecrets:
        - name: harbor
      containers:
      - name: test-page
        image: harbor.flou.dev/flou21/test-page:ac30c07a-38f8-41a4-83c2-786ee19ffb9d
        resources:
          requests:
            memory: 10Mi
            cpu: 10m
          limits:
            memory: 20Mi
            cpu: 20m
        ports:
        - containerPort: 80
          name: web
  minReadySeconds: 30
  revisionHistoryLimit: 3
  strategy:
    canary: 
      steps:
      - setWeight: 20
      - pause: {duration: 2m}
      - analysis:
          templates:
          - templateName: success-rate
          args:
          - name: service-name
            value: test-page-svc
      - setWeight: 50
      - pause: {duration: 2m}
      - analysis:
          templates:
          - templateName: success-rate
          args:
          - name: service-name
            value: test-page-svc
      maxUnavailable: 1
      canaryService: test-page-canary
      stableService: test-page-stable
      trafficRouting:
        smi:
          rootService: test-page
          trafficSplitName: test-page-canary-traffic-split
---
apiVersion: v1
kind: Service
metadata:
  name: test-page
  namespace: homepage
spec:
  selector:
    app: test-page
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: test-page-stable
  namespace: homepage
spec:
  selector:
    app: test-page
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: test-page-canary
  namespace: homepage
spec:
  selector:
    app: test-page
  ports:
  - port: 80
    targetPort: 80
