homepage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage-ingress
  namespace: homepage
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: flou.dev
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: test-page-stable-svc
            port:
              number: 80
